--- a/price.html
+++ b/price.html
@@ -1,1 +1,10 @@
-
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>Прайс-лист</title>
+		<link href="css/style.css" rel="stylesheet">
+	</head>
+ 	<body>
+    	<!-- Основная разметка -->
+	</body>
+</html>
