--- a/price.html
+++ b/price.html
@@ -1,10 +1,121 @@
+<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8">
 		<title>Прайс-лист</title>
 		<link href="css/style.css" rel="stylesheet">
 	</head>
- 	<body>
-    	<!-- Основная разметка -->
+	<body>
+    	<header class="main-header">
+    		<div class="container clearfix">
+    			<nav class="main-navigation">
+    				<ul>
+    					<li>
+    						<a href="#">Главная</a>
+    					</li>
+    					<li>
+    						<a href="#">Информация</a>
+    					</li>
+    					<li>
+    						<a href="#">Новости</a>
+    					</li>
+    					<li class="active">
+    						<a href="#">Прайс-лист</a>
+    					</li>
+    					<li>
+    						<a href="#">Магазин</a>
+    					</li>
+    					<li>
+    						<a href="#">Контакты</a>
+    					</li>
+    				</ul>
+    			</nav>
+    			<div class="user-block">
+    				<a href="#" class="login">Вход</a>
+    			</div>
+    		</div>
+    	</header>
+    	<div class="main-block">
+			<div class="container clerfix">
+				<div class="content-title">
+					<h1>Прайс-Лист</h1>
+						<nav class="breadcrumbs">
+							<ul>
+								<li>
+									<a href="#">Главная</a> 
+								</li>
+								<li class="active">
+									<a href="#">Прайс-Лист</a>
+								</li>
+							</ul>
+						</nav>
+				</div>
+				<div class="container-center-title">
+					<div class="horizontal-line-left"></div>
+					<div class="center-title">
+						<h1>ИСТИННО МУЖСКАЯ КЛАССИКА</h1>
+					</div>
+					<div class="horizontal-line-right"></div>
+				</div>
+				<div class="index-content clearfix">
+					<div class="content-column-left">
+						<p>Мы используем только<br>
+						лучшие средства:</p>
+						<ul class="products">
+							<li>Baxter of California</li>
+							<li>Mr Natty</li>
+							<li>Suavecito</li>
+							<li>Malin+Goets</li>
+						</ul>
+					</div>
+					<div class="content-column-right">
+						<p>Цены на услуги<br>
+						наших мастеров:</p>
+						<table border="1">
+							<tr>
+								<td>Стрижка</td>
+								<td>1500 р.</td>
+							</tr>
+							<tr>
+								<td>Стрижка бороды</td>
+								<td>500 р.</td>
+							</tr>
+							<tr>
+								<td>Накрутка усов</td>
+								<td>350 р.</td>
+							</tr>
+						</table>
+					</div>
+				</div>
+				<div class="index-content clearfix">
+					<div class="content-column-left">	
+						<p>Несколько слов о нас</p>
+						<p>Наша парикмахерская занимается исключительно мужскими стрижками. Стрижка каждого клиента для нас - это уникальная и продуманная до мелочей работа. Мы не работаем на количество, мы делаем качество.</p>
+					</div>
+					<div class="content-column-right">	
+						<p>Наша мастерская расположена в центре города, поэтому сделать стильную стрижку можно в любое время, даже в обеденный перерыв. Здесь вы можете погрузиться в удобную для вас атмосферу, чувствовать себя комфортно и свободно!</p>
+					</div>
+				</div>	
+    	</div>
+    	<footer class="main-footer">
+    		<div class="container clearfix">
+    			<div class="footer-contacts">
+    				Барбершоп «Бородинский»<br>
+    				Адрес: г. Санкт-Петербург, ул.Б.Конюшенная, д. 19/8<br>
+    				<a href="#">Как нас найти?</a><br>
+    				Телефон: +7 (495) 666-02-66
+    			</div>
+    			<div class="footer-social">
+    				<p>Давайте дружить!</p>
+    				<a href="#" class="social-btn social-btn-vk">VK</a>
+    				<a href="#" class="social-btn social-btn-fb">FB</a>
+    				<a href="#" class="social-btn social-btn-inst">INST</a>
+    			</div>
+    			<div class="footer-copyright">
+    				<p>Разработано:</p>
+    				<a href="#" class="copyright">HTMLACADEMY.RU</a>
+    			</div>
+			</div>
+    	</footer>
 	</body>
 </html>
