исправлена грамматическая ошибка в классе "container"

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -7,7 +7,7 @@
   	</head>
  	<body>
     	<header class="main-header">
-    		<div class="conteiner clearfix">
+    		<div class="container clearfix">
     			<nav class="main-navigation">
     				<ul>
     					<li>
@@ -36,7 +36,7 @@
     		</div>
     	</header>
     	<div class="main-block">
-    		<div class="conteiner clearfix">
+    		<div class="container clearfix">
 				<div class="content-title">
 					<h1>Набор для путешествий «Baxter of California»</h1>
 						<nav class="breadcrubs">
