--- a/catalog.html
+++ b/catalog.html
@@ -1,215 +1,210 @@
 <!DOCTYPE html>
 <html>
- 	<head>
-	    <meta charset="utf-8">
-	    <title>Каталог</title>
-	    <link href="css/style.css" rel="stylesheet">
-  	</head>
- 	<body>
-    	<header class="main-header">
-    		<div class="container clearfix">
-    			<nav class="main-navigation">
-    				<ul>
-    					<li>
-    						<a href="">Главная</a>	
-    					</li>
-    					<li>
-    						<a href="">Информация</a>
-    					</li>
-    					<li>
-    						<a href="">Новости</a>
-    					</li>   					
-    					<li>
-    						<a href="">Прайс-лист</a>
-    					</li>
-    					<li class="active">
-    						<a href="">Магазин</a>
-    					</li>    					
-    					<li>
-    						<a href="">Контакты</a>
-    					</li>    					
-    				</ul>
-    			</nav>
-    			<div class="user-block">
-    				<a href="#" class="login">Вход</a>
-    			</div>
-    		</div>    		
-    	</header>
-    	<div class="main-block">
-    		<div class="container clearfix">
-    			<div class="content-title">
-    				<h1>Средства для ухода</h1>	
-						<nav class="breadcrubs">
-							<ul>
-								<li>
-									<a href="#">Главная</a>
-								</li>
-								<li>
-									<a href="#">Магазин</a>
-								</li>
-								<li>
-									<a href="#">Средства для ухода</a>
-								</li>
-							</ul>			
-						</nav>
-    			</div>
-    			<div class="content-filter-top">
-    				<h2>Производители</h2>
-						<form action="#" method="post">
-							<label>
-								<input type="checkbox" name="Baxter-of-California">Baxter-of-California
-							</label>
-						</form>
-						<form action="#" method="post">
-							<label>
-								<input type="checkbox" name="Mr-Natty">Mr Natty
-							</label>
-						</form>
-						<form action="#" method="post">
-							<label>
-								<input type="checkbox" name="Suavecito">Suavecito
-							</label>	
-						</form>
-						<form action="#" method="post">
-							<label>
-								<input type="checkbox" name="Malin+Goetz">Malin+Goetz
-							</label>	
-						</form>
-						<form action="#" method="post">
-							<label>
-								<input type="checkbox" name="Murray’s">Murray’s
-							</label>	
-						</form>
-						<form action="#" method="post">
-							<label>
-								<input type="checkbox" name="American-Crew">American Crew
-							</label>	
-						</form>
-    			</div>
-    			<div class="content-filter-bottom">
-					<h2>Группы товаров</h2>
-						<form action="#" method="post">
-							<label>
-								<input type="checkbox" name="Shave">Бритвенные принадлежности
-							</label>	
-						</form>
-						<form action="#" method="post">
-							<label>
-								<input type="checkbox" name="Care">Средства для ухода
-							</label>	
-						</form>
-						<form action="#" method="post">
-							<label>	
-								<input type="checkbox" name="Accessories">Аксессуары
-							</label>	
-						</form>
-    			</div>
-    			<div class="content-filter-button">
-    					<form action="#" method="post">
-							<input type="submit" value="Показать">
-						</form>
-    			</div>
-    			<div class="main-products">
-					<div class="product top-left">
-						<a href="#">
+    <head>
+        <meta charset="utf-8">
+        <title>Каталог</title>
+        <link href="css/style.css" rel="stylesheet">
+    </head>
+    <body>
+
+        <!-- header -->
+        <header class="main-header">
+            <div class="container clearfix">
+                <nav class="main-navigation">
+                    <ul>
+                        <li>
+                            <a href="#">Главная</a> 
+                        </li>
+                        <li>
+                            <a href="#">Информация</a>
+                        </li>
+                        <li>
+                            <a href="#">Новости</a>
+                        </li>                       
+                        <li>
+                            <a href="#">Прайс-лист</a>
+                        </li>
+                        <li class="active">
+                            <a href="#">Магазин</a>
+                        </li>
+                        <li>
+                            <a href="#">Контакты</a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="user-block">
+                    <a href="#" class="login">Вход</a>
+                </div>
+            </div>
+        </header>
+
+        <!-- main-block -->
+        <div class="main-block">
+            <div class="container">
+                <h1 class="page-title">Средства для ухода</h1>
+
+                <!-- breadcrumbs -->
+                <ul class="breadcrumbs">
+                    <li>
+                        <a href="#">Главная</a>
+                    </li>
+                    <li>
+                        <a href="#">Магазин</a>
+                    </li>
+                    <li>Средства для ухода</li>
+                </ul>
+
+                <!-- catalog -->
+                <div class="catalog clearfix">
+
+                    <!-- sidebar -->
+                    <aside class="filter">
+                        <form action="#" method="post">
+                            <h2 class="filter-title-1">Производители</h2>
+                            <input type="checkbox" id="ch1" name="Baxter-of-California" checked>
+                            <label for="ch1">Baxter of California</label>
+                            <input type="checkbox" id="ch2" name="Mr-Natty">
+                            <label for="ch2">Mr Natty</label>
+                            <input type="checkbox" id="ch3" name="Suavecito" checked>
+                            <label for="ch3">Suavecito</label>
+                            <input type="checkbox" id="ch4" name="Malin+Goetz">
+                            <label for="ch4">Malin+Goetz</label>
+                            <input type="checkbox" id="ch5" name="Murray’s">
+                            <label for="ch5">Murray’s</label>
+                            <input type="checkbox" id="ch6" name="American-Crew" checked>
+                            <label for="ch6">American Crew</label>
+                            <h2 class="filter-title-2">Группы товаров</h2>
+                            <input type="radio" id="rd1" name="option" checked> 
+                            <label for="rd1">Бритвенные принадлежности</label>
+                            <input type="radio" id="rd2" name="option">
+                            <label for="rd2">Средства для ухода</label>
+                            <input type="radio" id="rd3" name="option">
+                            <label for="rd3">Аксессуары</label>
+                            <button type="submit" name="button">Показать</button>
+                            </form>
+                    </aside>
+
+                    <!-- catalog-container -->
+                    <div class="catalog-container">
+
+                        <!-- catalog-item -->
+                        <article class="catalog-item">
                             <img src="http://placehold.it/220x165" width="220" height="165">
-                            <p>Набор для путешествий «Baxter of California»</p>
-                        </a>
-						<div class="price">
-    						<p>2900 руб.</p>
-    					</div>
-    					<div class="buy-button">
-    						<a href="#" class="buy">Купить</a>
-    					</div>
-					</div>
-					<div class="product top-center">
-                        <a href="#">
+                            <div class="description">
+                                <h3 class="catalog-item-title">Набор для путешествий <span>«Baxter of California»</span></h3>
+                                <div class="price-container">
+                                    <div class="price">2900 руб.</div>
+                                    <a href="#" class="buy">Купить</a>
+                                </div>
+                            </div>
+                        </article>
+
+                        <!-- catalog-item -->
+                        <article class="catalog-item">
                             <img src="http://placehold.it/220x165" width="220" height="165">
-                            <p>Увлажняющий кондиционер «Baxter of California»</p>
-                        </a>  
-						<div class="price">
-    						<p>750 руб.</p>
-    					</div>
-    					<div class="buy-button">
-    						<a href="#" class="buy">Купить</a>
-    					</div>
-					</div>
-					<div class="product top-right">
-                        <a href="#">    
+                            <div class="description">
+                                <h3 class="catalog-item-title">Увлажняющий кондиционер <span>«Baxter of California»</span></h3>
+                                <div class="price-container">
+                                    <div class="price">750 руб.</div>
+                                    <a href="#" class="buy">Купить</a>
+                                </div>
+                            </div>
+                        </article>
+
+                        <!-- catalog-item -->
+                        <article class="catalog-item">
                             <img src="http://placehold.it/220x165" width="220" height="165">
-                            <p>Гель для волос «SAUVECITO»</p>
-                        </a>  
-						<div class="price">
-    						<p>290 руб.</p>
-    					</div>
-    					<div class="buy-button">
-    						<a href="#" class="buy">Купить</a>
-    					</div>
-					</div>
-					<div class="product bottom-left">
-						<a href="#">
+                            <div class="description">
+                                <h3 class="catalog-item-title">Гель для волос <span>«SAUVECITO»</span></h3>
+                                <div class="price-container">
+                                    <div class="price">290 руб.</div>
+                                    <a href="#" class="buy">Купить</a>
+                                </div>
+                            </div>
+                        </article>
+
+                        <!-- catalog-item -->
+                        <article class="catalog-item">
                             <img src="http://placehold.it/220x165" width="220" height="165">
-                            <p>Глина для укладки волос  «American crew»</p>
-                        </a>    
-						<div class="price">
-    						<p>500 руб.</p>
-    					</div>
-    					<div class="buy-button">
-    						<a href="#" class="buy">Купить</a>
-    					</div>
-					</div>
-					<div class="product bottom-center">
-						<a href="#">
+                            <div class="description">
+                                <h3 class="catalog-item-title">Глина для укладки волос <span>«American crew»</span></h3>
+                                <div class="price-container">
+                                    <div class="price">500 руб.</div>
+                                    <a href="#" class="buy">Купить</a>
+                                </div>
+                            </div>
+                        </article>
+
+                        <!-- catalog-item -->
+                        <article class="catalog-item">
                             <img src="http://placehold.it/220x165" width="220" height="165">
-                            <p>Гель для волос «AMERICAN CREW»</p>
-                        </a>    
-						<div class="price">
-    						<p>300 руб.</p>
-    					</div>
-    					<div class="buy-button">
-    						<a href="#" class="buy">Купить</a>
-    					</div>
-					</div>
-					<div class="product bottom-right"> 
-                        <a href="#">
-                            <img src="http://placehold.it/220x165" width="220" height="165"> 
-                            <p>Набор для бритья «Baxter of California»</p>
-                        </a>    
-						<div class="price">
-    						<p>3900 руб.</p>
-    					</div>
-    					<div class="buy-button">
-    						<a href="#" class="buy">Купить</a>
-    					</div>
-					</div>					
-    			</div>
-    			<div class="paginator">
-            		<a href="#1">1</a>
-            		<a href="#2" class="active">2</a>
-            		<a href="#3">3</a>
-            		<a href="#4">4</a>
-        		</div>
-    		</div>
-    	</div>
-    	<footer class="main-footer">
-    		<div class="container clearfix">
-    			<div class="footer-contacts">
-    				Барбершоп «Бородинский»<br>
-        			Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-          			<a href="#">Как нас найти?</a><br>
-          			телефон: +7 (495) 666-02-66	
-    			</div>
-    			<div class="footer-social">
-    				<p>Давайте дружить!</p>
-          			<a href="#" class="social-btn social-btn-vk">VК</a>
-          			<a href="#" class="social-btn social-btn-fb">FB</a>
-          			<a href="#" class="social-btn social-btn-inst">INST</a>
-    			</div>
-    			<div class="footer-copyright">
-    				<p>Разработано:</p>	
-    				<a href="#" class="copyright">htmlacademy.ru</a>
-    			</div>
-    		</div>
-    	</footer>
-	</body>
+                            <div class="description">
+                                <h3 class="catalog-item-title">Гель для волос <span>«AMERICAN CREW»</span></h3>
+                                <div class="price-container">
+                                    <div class="price">300 руб.</div>
+                                    <a href="#" class="buy">Купить</a>
+                                </div>
+                            </div>
+                        </article>
+
+                        <!-- catalog-item -->
+                        <article class="catalog-item">
+                            <img src="http://placehold.it/220x165" width="220" height="165">
+                            <div class="description">
+                                <h3 class="catalog-item-title">Набор для бритья <span>«Baxter of California»</span></h3>
+                                <div class="price-container">
+                                    <div class="price">2900 руб.</div>
+                                    <a href="#" class="buy">Купить</a>
+                                </div>
+                            </div>
+                        </article>
+
+                        <!-- pagination -->
+                        <ul class="pagination">
+                            <li>
+                                <a href="#">1</a>
+                            </li>
+                            <li>
+                                <a href="#" class="active">2</a>
+                            </li>
+                            <li>
+                                <a href="#">3</a>
+                            </li>
+                            <li>
+                                <a href="#">4</a>
+                            </li>
+                         </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- footer -->
+        <footer class="main-footer">
+            <div class="container clearfix">
+
+                <!-- contacts -->
+                <div class="footer-contacts">
+                    Барбершоп «Бородинский»<br>
+                    Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+                    <a href="#">Как нас найти?</a><br>
+                    телефон: +7 (495) 666-02-66 
+                </div>
+
+                <!-- social -->
+                <div class="footer-social">
+                    <p>Давайте дружить!</p>
+                    <a href="#" class="social-btn social-btn-vk">VК</a>
+                    <a href="#" class="social-btn social-btn-fb">FB</a>
+                    <a href="#" class="social-btn social-btn-inst">INST</a>
+                </div>
+
+                <!-- copyright -->
+                <div class="footer-copyright">
+                    <p>Разработано:</p>
+                    <a href="#" class="copyright">htmlacademy.ru</a>
+                </div>
+            </div>
+        </footer>
+    </body>
 </html>
