--- a/technomart/index.html
+++ b/technomart/index.html
@@ -15,8 +15,7 @@
                 <div class="container clearfix">
                     <div class="logo">Техномарт</div>
                     <form class="search-btn">
-                        <label for="search">Поиск</label>
-                        <input type="text" id="search">                        
+                        <input type="text" placeholder="Поиск">                        
                     </form>
                     <a href="#" class="header-btn bookmark">Закладки:</a>
                     <a href="#" class="header-btn recycle">Корзина:</a>
@@ -192,35 +191,35 @@
             </div>
 
             <!-- Популярные производители -->
-            <div class="section-title" clearfix>
+            <div class="section-title clearfix">
                 <div class="section-title-text">Популярные производители:</div>
                 <a href="#" class="button button-red">Все производители</a>
             </div> 
 
             <!-- Каталог фирм -->
             <div class="catalog-firms">
-                <a href="#" class="catalof-firms-item">
+                <a href="#" class="catalog-firms-item">
                     <img src="http://placehold.it/218x143" width="218" height="143" alt="фирма1">
                 </a>
-                <a href="#" class="catalof-firms-item">
+                <a href="#" class="catalog-firms-item">
                     <img src="http://placehold.it/218x143" width="218" height="143" alt="фирма2">
                 </a>
-                <a href="#" class="catalof-firms-item">
+                <a href="#" class="catalog-firms-item">
                     <img src="http://placehold.it/218x143" width="218" height="143" alt="фирма3">
                 </a>
-                <a href="#" class="catalof-firms-item">
+                <a href="#" class="catalog-firms-item">
                     <img src="http://placehold.it/218x143" width="218" height="143" alt="фирма4">
                 </a>
-                <a href="#" class="catalof-firms-item">
+                <a href="#" class="catalog-firms-item">
                     <img src="http://placehold.it/218x143" width="218" height="143" alt="фирма5">
                 </a>
-                <a href="#" class="catalof-firms-item">
+                <a href="#" class="catalog-firms-item">
                     <img src="http://placehold.it/218x143" width="218" height="143" alt="фирма6">
                 </a>
-                <a href="#" class="catalof-firms-item">
+                <a href="#" class="catalog-firms-item">
                     <img src="http://placehold.it/218x143" width="218" height="143" alt="фирма7">
                 </a>
-                <a href="#" class="catalof-firms-item">
+                <a href="#" class="catalog-firms-item">
                     <img src="http://placehold.it/218x143" width="218" height="143" alt="фирма8">
                 </a>
             </div>
@@ -230,8 +229,7 @@
         <div class="service">
             <div class="container">
                 <h2 class="service-title">Сервисы</h2>
-                <p>Хороший интернет-магазин отличается от плохого не только ценами!<br>
-                Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+                <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
 
                 <!-- Контейнер меню услуг -->
                 <div class="service-types clearfix">
@@ -278,8 +276,7 @@
             <!-- Контакты -->
             <div class="contacts">
                 <h2 class="contacts-title">Контакты</h2>
-                <p>Вы можете забрать свой товар сами,<br>
-                заехав в наш офис:</p>
+                <p>Вы можете забрать свой товар сами, заехав в наш офис:</p>
                 <img src="http://placehold.it/300x155" width="300" height="155" alt="Схема проезда">
                 <a href="#" class="button-red">Заблудились? Напишите нам!</a>
             </div>            
@@ -303,7 +300,7 @@
 
                     <!-- column-right -->
                     <div class="footer-column-right">
-                        <ul class="footer-navigation-top">
+                        <ul class="footer-navigation">
                             <li>
                                 <a href="#">Компания</a>
                             </li>
@@ -320,7 +317,7 @@
                                 <a href="#">Контакты</a>
                             </li>
                         </ul>
-                        <ul class="footer-navigation-bottom">
+                        <ul class="footer-navigation footer-navigation-bottom">
                             <li>
                                 <a href="#">Материалы</a>
                             </li>
@@ -358,7 +355,7 @@
                     <!-- Обратная связь -->
                     <div class="footer-feedback">
                         <p>Обратная связь</p>
-                        <a href="#" class="feedback">mail@htmlacademy.ru</a>
+                        <a href="mailto:mail@htmlacademy.ru" class="feedback">mail@htmlacademy.ru</a>
                     </div>
 
                     <!-- Разработано -->
