Еще немножко правок

--- a/technomart/catalog.html
+++ b/technomart/catalog.html
@@ -15,8 +15,7 @@
                 <div class="container clearfix">
                     <a href="#" class="logo">Техномарт</a>
                     <form class="search-btn">
-                        <label for="search">Поиск</label>
-                        <input type="text" id="search">                        
+                        <input type="text" placeholder="Поиск">                        
                     </form>
                     <a href="#" class="header-btn bookmark">Закладки:</a>
                     <a href="#" class="header-btn recycle">Корзина:</a>
@@ -29,17 +28,16 @@
                 <div class="container">
                     
                     <!-- info-container -->
-                    <div class="info-container" clearfix>
+                    <div class="info-container clearfix">
                         <div class="shop-block">Интернет-магазин строительных материалов и инстументов для ремонта</div>
                         <div class="contact-block">
                             <div class="tel">+7 (812) 555-05-55</div>
                             <div class="address">г.Санкт-Петербург, ул.Б.Конюшенная, д.19/8</div>
                         </div>
                         <div class="user-block">
-                        	<div class="user-name">Равшан Джамшутович</div>
-                            <a href="#" class="sign-out">Значок выхода (символ)</a>
+                            <div class="user-name">Равшан Джамшутович <a href="#" class="sign-out">Значок выхода (символ)</a></div>
                             <a href="#" class="orders">Мои заказы</a>
-    						<a href="#" class="office">Личный кабинет</a>
+    			    <a href="#" class="office">Личный кабинет</a>
                         </div> 
                     </div>          
                     
@@ -305,7 +303,7 @@
 
                     <!-- column-right -->
                     <div class="footer-column-right">
-                        <ul class="footer-navigation-top">
+                        <ul class="footer-navigation">
                             <li>
                                 <a href="#">Компания</a>
                             </li>
@@ -322,7 +320,7 @@
                                 <a href="#">Контакты</a>
                             </li>
                         </ul>
-                        <ul class="footer-navigation-bottom">
+                        <ul class="footer-navigation footer-navigation-bottom">
                             <li>
                                 <a href="#">Материалы</a>
                             </li>
