--- a/catalog-item.html
+++ b/catalog-item.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Страница товара</title>
+        <link href="http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&subset=latin,cyrillic-ext,latin-ext,cyrillic" rel="stylesheet" type="text/css">
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
@@ -65,18 +66,18 @@
 
                         <!-- picture-big -->
                         <div class="picture-big">
-                            <img src="http://placehold.it/460x500" width="460" height="500">
+                            <img src="img/picture-catalog-big-1.jpg" width="460" height="500">
                         </div>
 
                         <!-- picture-small -->
                         <div class="picture-small">
-                            <img src="http://placehold.it/140x150" width="140" height="150">
+                            <img src="img/picture-catalog-small-1.jpg" width="140" height="150">
                         </div>
                         <div class="picture-small">
-                            <img src="http://placehold.it/140x150" width="140" height="150">
+                            <img src="img/picture-catalog-small-2.jpg" width="140" height="150">
                         </div>
                         <div class="picture-small">
-                            <img src="http://placehold.it/140x150" width="140" height="150">
+                            <img src="img/picture-catalog-small-3.jpg" width="140" height="150">
                         </div>    
                     </div>
 
