--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Каталог</title>
+        <link href="http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&subset=latin,cyrillic-ext,latin-ext,cyrillic" rel="stylesheet" type="text/css">
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
@@ -60,7 +61,7 @@
                     <!-- sidebar -->
                     <aside class="filter">
                         <form action="#" method="post">
-                            <h2 class="filter-title-1">Производители</h2>
+                            <h2 class="filter-title">Производители</h2>
                             <input type="checkbox" id="ch1" name="Baxter-of-California" checked>
                             <label for="ch1">Baxter of California</label>
                             <input type="checkbox" id="ch2" name="Mr-Natty">
@@ -73,7 +74,7 @@
                             <label for="ch5">Murray’s</label>
                             <input type="checkbox" id="ch6" name="American-Crew" checked>
                             <label for="ch6">American Crew</label>
-                            <h2 class="filter-title-2">Группы товаров</h2>
+                            <h2 class="filter-title filter-title-bottom">Группы товаров</h2>
                             <input type="radio" id="rd1" name="option" checked> 
                             <label for="rd1">Бритвенные принадлежности</label>
                             <input type="radio" id="rd2" name="option">
@@ -89,7 +90,7 @@
 
                         <!-- catalog-item -->
                         <article class="catalog-item">
-                            <img src="http://placehold.it/220x165" width="220" height="165">
+                            <img src="img/picture-catalog-item-1.jpg" width="220" height="165">
                             <div class="description">
                                 <h3 class="catalog-item-title">Набор для путешествий <span>«Baxter of California»</span></h3>
                                 <div class="price-container">
@@ -101,7 +102,7 @@
 
                         <!-- catalog-item -->
                         <article class="catalog-item">
-                            <img src="http://placehold.it/220x165" width="220" height="165">
+                            <img src="img/picture-catalog-item-2.jpg" width="220" height="165">
                             <div class="description">
                                 <h3 class="catalog-item-title">Увлажняющий кондиционер <span>«Baxter of California»</span></h3>
                                 <div class="price-container">
@@ -113,7 +114,7 @@
 
                         <!-- catalog-item -->
                         <article class="catalog-item">
-                            <img src="http://placehold.it/220x165" width="220" height="165">
+                            <img src="img/picture-catalog-item-3.jpg" width="220" height="165">
                             <div class="description">
                                 <h3 class="catalog-item-title">Гель для волос <span>«SAUVECITO»</span></h3>
                                 <div class="price-container">
@@ -125,7 +126,7 @@
 
                         <!-- catalog-item -->
                         <article class="catalog-item">
-                            <img src="http://placehold.it/220x165" width="220" height="165">
+                            <img src="img/picture-catalog-item-4.jpg" width="220" height="165">
                             <div class="description">
                                 <h3 class="catalog-item-title">Глина для укладки волос <span>«American crew»</span></h3>
                                 <div class="price-container">
@@ -137,7 +138,7 @@
 
                         <!-- catalog-item -->
                         <article class="catalog-item">
-                            <img src="http://placehold.it/220x165" width="220" height="165">
+                            <img src="img/picture-catalog-item-5.jpg" width="220" height="165">
                             <div class="description">
                                 <h3 class="catalog-item-title">Гель для волос <span>«AMERICAN CREW»</span></h3>
                                 <div class="price-container">
@@ -149,7 +150,7 @@
 
                         <!-- catalog-item -->
                         <article class="catalog-item">
-                            <img src="http://placehold.it/220x165" width="220" height="165">
+                            <img src="img/picture-catalog-item-6.jpg" width="220" height="165">
                             <div class="description">
                                 <h3 class="catalog-item-title">Набор для бритья <span>«Baxter of California»</span></h3>
                                 <div class="price-container">
