--- a/price.html
+++ b/price.html
@@ -53,7 +53,7 @@
 
                 <!-- Promo-text -->
                 <div class="promo-text">
-                    <h1>Истинно мужская классика</h1>
+                    <h1 class="promo-text-title">Истинно мужская классика</h1>
                 </div>
 
                 <!-- main-content -->
