--- a/technomart/catalog.html
+++ b/technomart/catalog.html
@@ -168,7 +168,7 @@
 
 						<!-- catalog-item -->
 						<article class="catalog-item">
-                    		<img src="http://placehold.it/218x150" width="218" height="150">
+                    		<img src="img/picture-catalog-item.jpg" width="218" height="150">
                     		<div class="descriprion-item">
                         		<h3 class="catalog-item-title">Перфоратор <span>bosh bfg 3000</span></h3>
                         		<div class="old-price">22500 р.</div>
@@ -178,7 +178,7 @@
 
                     	<!-- catalog-item -->
 						<article class="catalog-item">
-                    		<img src="http://placehold.it/218x150" width="218" height="150">
+                    		<img src="img/picture-catalog-item.jpg" width="218" height="150">
                     		<div class="descriprion-item">
                         		<h3 class="catalog-item-title">Перфоратор <span>bosh bfg 6000</span></h3>
                         		<div class="old-price">30500 р.</div>
@@ -188,7 +188,7 @@
 
 						<!-- catalog-item -->
                         <article class="catalog-item">
-                            <img src="http://placehold.it/218x150" width="218" height="150">
+                            <img src="img/picture-catalog-item.jpg" width="218" height="150">
                             <div class="descriprion-item">
                                 <h3 class="catalog-item-title">Перфоратор <span>bosh bfg 6000</span></h3>
                                 <div class="old-price">30500 р.</div>
@@ -198,7 +198,7 @@
 
                     	<!-- catalog-item -->
 						<article class="catalog-item">
-                    		<img src="http://placehold.it/218x150" width="218" height="150">
+                    		<img src="img/picture-catalog-item.jpg" width="218" height="150">
                     		<div class="descriprion-item">
                         		<h3 class="catalog-item-title">Перфоратор <span>bosh bfg 3000</span></h3>
                         		<div class="old-price">22500 р.</div>
@@ -208,7 +208,7 @@
 
                     	<!-- catalog-item -->
 						<article class="catalog-item">
-                    		<img src="http://placehold.it/218x150" width="218" height="150">
+                    		<img src="img/picture-catalog-item.jpg" width="218" height="150">
                     		<div class="descriprion-item">
                         		<h3 class="catalog-item-title">Перфоратор <span>bosh bfg 6000</span></h3>
                         		<div class="old-price">30500 р.</div>
@@ -218,7 +218,7 @@
 
                     	<!-- catalog-item -->
 						<article class="catalog-item">
-                    		<img src="http://placehold.it/218x150" width="218" height="150">
+                    		<img src="img/picture-catalog-item.jpg" width="218" height="150">
                     		<div class="descriprion-item">
                         		<h3 class="catalog-item-title">Перфоратор <span>bosh bfg 2000</span></h3>
                         		<div class="old-price"></div>
@@ -228,7 +228,7 @@
 
                     	<!-- catalog-item -->
 						<article class="catalog-item">
-                    		<img src="http://placehold.it/218x150" width="218" height="150">
+                    		<img src="img/picture-catalog-item.jpg" width="218" height="150">
                     		<div class="descriprion-item">
                         		<h3 class="catalog-item-title">Перфоратор <span>bosh bfg 3000</span></h3>
                         		<div class="old-price">22500 р.</div>
@@ -238,7 +238,7 @@
 
                     	<!-- catalog-item -->
 						<article class="catalog-item">
-                    		<img src="http://placehold.it/218x150" width="218" height="150">
+                    		<img src="img/picture-catalog-item.jpg" width="218" height="150">
                     		<div class="descriprion-item">
                         		<h3 class="catalog-item-title">Перфоратор <span>bosh bfg 6000</span></h3>
                         		<div class="old-price">30500 р.</div>
@@ -248,7 +248,7 @@
 
                     	<!-- catalog-item -->
 						<article class="catalog-item">
-                    		<img src="http://placehold.it/218x150" width="218" height="150">
+                    		<img src="img/picture-catalog-item.jpg" width="218" height="150">
                     		<div class="descriprion-item">
                         		<h3 class="catalog-item-title">Перфоратор <span>bosh bfg 2000</span></h3>
                         		<div class="old-price"></div>
