--- a/technomart/index.html
+++ b/technomart/index.html
@@ -154,7 +154,7 @@
             <div class="catalog clearfix">
                 <!-- catalog-item -->
                 <article class="catalog-item">
-                    <img src="http://placehold.it/218x150" width="218" height="150">
+                    <img src="img/picture-catalog-item.jpg" width="218" height="150">
                     <div class="descriprion-item">
                         <h3 class="catalog-item-title">Перфоратор <span>bosh bfg 900</span></h3>
                         <div class="old-price">32500 р.</div>
@@ -163,7 +163,7 @@
                 </article>
                 <!-- catalog-item -->
                 <article class="catalog-item">
-                    <img src="http://placehold.it/218x150" width="218" height="150">
+                    <img src="img/picture-catalog-item.jpg" width="218" height="150">
                     <div class="descriprion-item">
                         <h3 class="catalog-item-title">Перфоратор <span>bosh bfg 3000</span></h3>
                         <div class="old-price">22500 р.</div>
@@ -172,7 +172,7 @@
                 </article>
                 <!-- catalog-item -->
                 <article class="catalog-item">
-                    <img src="http://placehold.it/218x150" width="218" height="150">
+                    <img src="img/picture-catalog-item.jpg" width="218" height="150">
                     <div class="descriprion-item">
                         <h3 class="catalog-item-title">Перфоратор <span>bosh bfg 6000</span></h3>
                         <div class="old-price">30500 р.</div>
@@ -181,7 +181,7 @@
                 </article>
                 <!-- catalog-item -->
                 <article class="catalog-item">
-                    <img src="http://placehold.it/218x150" width="218" height="150">
+                    <img src="img/picture-catalog-item.jpg" width="218" height="150">
                     <div class="descriprion-item">
                         <h3 class="catalog-item-title">Перфоратор <span>bosh bfg 2000</span></h3>
                         <div class="old-price"></div>
@@ -199,28 +199,28 @@
             <!-- Каталог фирм -->
             <div class="catalog-firms">
                 <a href="#" class="catalog-firms-item">
-                    <img src="http://placehold.it/218x143" width="218" height="143" alt="фирма1">
+                    <img src="img/logo-firm-1.jpg" width="218" height="143" alt="фирма1">
                 </a>
                 <a href="#" class="catalog-firms-item">
-                    <img src="http://placehold.it/218x143" width="218" height="143" alt="фирма2">
+                    <img src="img/logo-firm-2.jpg" width="218" height="143" alt="фирма2">
                 </a>
                 <a href="#" class="catalog-firms-item">
-                    <img src="http://placehold.it/218x143" width="218" height="143" alt="фирма3">
+                    <img src="img/logo-firm-3.jpg" width="218" height="143" alt="фирма3">
                 </a>
                 <a href="#" class="catalog-firms-item">
-                    <img src="http://placehold.it/218x143" width="218" height="143" alt="фирма4">
+                    <img src="img/logo-firm-4.jpg" width="218" height="143" alt="фирма4">
                 </a>
                 <a href="#" class="catalog-firms-item">
-                    <img src="http://placehold.it/218x143" width="218" height="143" alt="фирма5">
+                    <img src="img/logo-firm-5.jpg" width="218" height="143" alt="фирма5">
                 </a>
                 <a href="#" class="catalog-firms-item">
-                    <img src="http://placehold.it/218x143" width="218" height="143" alt="фирма6">
+                    <img src="img/logo-firm-6.jpg" width="218" height="143" alt="фирма6">
                 </a>
                 <a href="#" class="catalog-firms-item">
-                    <img src="http://placehold.it/218x143" width="218" height="143" alt="фирма7">
+                    <img src="img/logo-firm-7.jpg" width="218" height="143" alt="фирма7">
                 </a>
                 <a href="#" class="catalog-firms-item">
-                    <img src="http://placehold.it/218x143" width="218" height="143" alt="фирма8">
+                    <img src="img/logo-firm-8.jpg" width="218" height="143" alt="фирма8">
                 </a>
             </div>
         </div>
@@ -277,7 +277,7 @@
             <div class="contacts">
                 <h2 class="contacts-title">Контакты</h2>
                 <p>Вы можете забрать свой товар сами, заехав в наш офис:</p>
-                <img src="http://placehold.it/300x155" width="300" height="155" alt="Схема проезда">
+                <img src="img/picture-map.jpg" width="300" height="155" alt="Схема проезда">
                 <a href="#" class="button-red">Заблудились? Напишите нам!</a>
             </div>            
         </div>    
