изменение названиий некоторых классов

--- a/technomart/catalog.html
+++ b/technomart/catalog.html
@@ -98,10 +98,10 @@
 				<aside class="sidebar">
 					<form action="#" method="post">
 						<div class="filter">Фильтр:</div> 
-						<h2 class="price">Цена:</h2>
+						<h2 class="filter-title">Цена:</h2>
 
 						<!-- Фильтр диапазона цены-->
-						<div class="range-filter">
+						<div class="rang-filter">
 							<div class="range-controls">
 								<div class="scale"></div>
 								<div class="toggle min-toggle"></div>
@@ -114,7 +114,7 @@
 						</div>	
 
 						<!-- Фильтр по производителям -->
-						<h2 class="Manufacturers">Производители:</h2>
+						<h2 class="filter-title">Производители:</h2>
 						<input type="checkbox" id="ch1" name="Bosh">
 						<label for="ch1">Bosh</label>
 						<input type="checkbox" id="ch2" name="Interscol">
@@ -127,7 +127,7 @@
 						<label for="ch5">Hitachi</label>
 
 						<!-- Фильтр по питанию -->
-						<h2 class="power">Питание:</h2>
+						<h2 class="filter-title">Питание:</h2>
 						<input type="radio" id="rd1" name="power">
 						<label for="rd1">Аккумуляторные</label>
 						<input type="radio" id="rd2" name="power">
@@ -279,7 +279,7 @@
 		<!-- Инфо о перфораторах -->
 		<div class="about-info">
     		<div class="container">
-            	<h2 class="about-info-title">Пара слов о перфоратарах</h2>
+            	<h2 class="block-title">Пара слов о перфоратарах</h2>
     			<p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.<br>
     			Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
             </div>
