изменение названий некоторых классов

--- a/technomart/index.html
+++ b/technomart/index.html
@@ -228,7 +228,7 @@
         <!-- Сервисы -->
         <div class="service">
             <div class="container">
-                <h2 class="service-title">Сервисы</h2>
+                <h2 class="block-title">Сервисы</h2>
                 <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
 
                 <!-- Контейнер меню услуг -->
@@ -261,7 +261,7 @@
 
             <!-- Описание компании -->
             <div class="company">
-                <h2 class="company-title">Компания "Техномарт"</h2>
+                <h2 class="block-title">Компания "Техномарт"</h2>
                 <p>Настоящий мужской шопинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
                 <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
                 Техномарт работает со многими транспортными компаниями:</p>
@@ -275,7 +275,7 @@
 
             <!-- Контакты -->
             <div class="contacts">
-                <h2 class="contacts-title">Контакты</h2>
+                <h2 class="block-title">Контакты</h2>
                 <p>Вы можете забрать свой товар сами, заехав в наш офис:</p>
                 <img src="img/picture-map.jpg" width="300" height="155" alt="Схема проезда">
                 <a href="#" class="button-red">Заблудились? Напишите нам!</a>
