некоторые изменения в процессе создания сетки

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -62,7 +62,7 @@
                 <div class="main-content clearfix">
 
                     <!-- picture-content -->
-                    <div class="picture-content">
+                    <div class="main-content-left">
 
                         <!-- picture-big -->
                         <div class="picture-big">
@@ -78,11 +78,11 @@
                         </div>
                         <div class="picture-small">
                             <img src="img/picture-catalog-small-3.jpg" width="140" height="150">
-                        </div>    
+                        </div>
                     </div>
 
                     <!-- descripion-content -->
-                    <div class="descripion-content">
+                    <div class="main-content-right">
 
                         <!-- product-info -->
                         <div class="product-info clearfix">
