некоторые изменения в процессе создания сетки

--- a/price.html
+++ b/price.html
@@ -60,7 +60,7 @@
                 <div class="main-content clearfix">
 
                     <!-- column-left -->
-                    <div class="main-content-column">
+                    <div class="main-content-column-left">
                         <p>Мы используем только<br>
                         лучшие средства:</p>
                         <ul class="products">
@@ -72,7 +72,7 @@
                     </div>
 
                     <!-- column-right -->
-                    <div class="main-content-column">
+                    <div class="main-content-column-right">
                         <p>Цены на услуги<br>
                         наших мастеров:</p>
                         <table border="1">
@@ -96,16 +96,16 @@
                 <div class="description-title">Несколько слов о нас:</div>
                 
                 <!-- description -->
-                <div class="main-description clearfix"></div>
-
+                <div class="main-description clearfix">
                     <!-- column-left -->
-                    <div class="description-content">
+                    <div class="main-content-column-left">
                         <p>Наша парикмахерская занимается исключительно мужскими стрижками. Стрижка каждого клиента для нас - это уникальная и продуманная до мелочей работа. Мы не работаем на количество, мы делаем качество.</p>
                     </div>
 
                     <!-- column-right -->
-                    <div class="description-content">
+                    <div class="main-content-column-right">
                         <p>Наша мастерская расположена в центре города, поэтому сделать стильную стрижку можно в любое время, даже в обеденный перерыв. Здесь вы можете погрузиться в удобную для вас атмосферу, чувствовать себя комфортно и свободно!</p>
+                    </div>
                 </div>
             </div>
         </div>
