--- a/catalog.html
+++ b/catalog.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Каталог</title>
         <link href="http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&subset=latin,cyrillic-ext,latin-ext,cyrillic" rel="stylesheet" type="text/css">
+        <link href="css/normalize.css" rel="stylesheet" >
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
@@ -14,14 +15,14 @@
                 <nav class="main-navigation">
                     <ul>
                         <li>
-                            <a href="#">Главная</a> 
+                            <a href="#">Главная</a>
                         </li>
                         <li>
                             <a href="#">Информация</a>
                         </li>
                         <li>
                             <a href="#">Новости</a>
-                        </li>                       
+                        </li>
                         <li>
                             <a href="#">Прайс-лист</a>
                         </li>
@@ -75,7 +76,7 @@
                             <input type="checkbox" id="ch6" name="American-Crew" checked>
                             <label for="ch6">American Crew</label>
                             <h2 class="filter-title filter-title-bottom">Группы товаров</h2>
-                            <input type="radio" id="rd1" name="option" checked> 
+                            <input type="radio" id="rd1" name="option" checked>
                             <label for="rd1">Бритвенные принадлежности</label>
                             <input type="radio" id="rd2" name="option">
                             <label for="rd2">Средства для ухода</label>
@@ -189,7 +190,7 @@
                     Барбершоп «Бородинский»<br>
                     Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
                     <a href="#">Как нас найти?</a><br>
-                    телефон: +7 (495) 666-02-66 
+                    телефон: +7 (495) 666-02-66
                 </div>
 
                 <!-- social -->
