некоторые изменения в процессе создания сетки

--- a/technomart/index.html
+++ b/technomart/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Техномарт</title>
-        <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700|Cuprum:400,700&subset=cyrillic-ext' rel='stylesheet' type='text/css'>
+        <link href="http://fonts.googleapis.com/css?family=PT+Sans:400,700|Cuprum:400,700&subset=cyrillic-ext" rel="stylesheet" type="text/css">
         <link href="css/normalize.css" rel="stylesheet" >
         <link href="css/style.css" rel="stylesheet">
     </head>
@@ -19,9 +19,11 @@
                     <form class="search-btn">
                         <input type="text" placeholder="Поиск">
                     </form>
-                    <a href="#" class="header-btn bookmark">Закладки:</a>
-                    <a href="#" class="header-btn recycle">Корзина:</a>
-                    <a href="#" class="header-btn checkout">Оформить заказ</a>
+                    <div class="header-button">
+                        <a href="#" class="header-btn bookmark">Закладки:</a>
+                        <a href="#" class="header-btn recycle">Корзина:</a>
+                        <a href="#" class="header-btn checkout">Оформить заказ</a>
+                    </div>
                 </div>
             </div>
 
