--- a/technomart/catalog.html
+++ b/technomart/catalog.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Каталог</title>
-        <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700|Cuprum:400,700&subset=cyrillic-ext' rel='stylesheet' type='text/css'>
+        <link href="http://fonts.googleapis.com/css?family=PT+Sans:400,700|Cuprum:400,700&subset=cyrillic-ext" rel="stylesheet" type="text/css">
         <link href="css/normalize.css" rel="stylesheet" >
         <link href="css/style.css" rel="stylesheet">
     </head>
