--- a/catalog-item.html
+++ b/catalog-item.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Страница товара</title>
         <link href="http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&subset=latin,cyrillic-ext,latin-ext,cyrillic" rel="stylesheet" type="text/css">
+        <link href="css/normalize.css" rel="stylesheet" >
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
